fix descriptions on mobile

--- a/css/custom_styles.css
+++ b/css/custom_styles.css
@@ -20,6 +20,12 @@
     }
 }
 
+@media (max-width: 992px) {
+    .modal-dialog p {
+        font-size: 0.7rem;
+    }
+}
+
 button:focus{
     outline:0 !important;
     box-shadow:none !important;
